src/View/Styles/App.css
html, body, #root, .App, .App div, #leftColumn{
  height: 100%;
}

.navbar {
  display: none !important;
}

@media screen and (max-width: 767px) {
  .container-fluid {
    height: 100% !important;
    padding-right: 0 !important;
    padding-left: 0 !important;
  }

  #nav, #leftColumn {
    display: none !important;
  }

  #content {
    height: 100% !important;
  }

  #rightColumn {
    display: flex;
    flex-flow: column;
  }

  .navbar {
    display: block !important;
    width: 100% !important;
  }

  #rightColumn > .row {
    width: auto !important;
    margin-left: 0 !important;
    margin-right: 0 !important;
  }
}

body {
  font-family: "Nunito", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, 
  "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", 
  "Segoe UI Symbol", "Noto Color Emoji" !important;
}

li {
  list-style: none;
}

#leftColumn, #leftColumn > ul {
  background-image: linear-gradient(180deg, #4e73df 10%, #224abe 100%);
}

#leftColumn > ul {
  margin-top: 10%;
  margin-bottom: 0px;
  padding-left: 0;
  width: 100%;
}

#leftColumn {
  display: inline;
}

.buttonNav {
  color: white !important;
  border: 0 !important;
  text-align: left !important;
  width: 100% !important;
  vertical-align: middle;
  border-radius: 8px !important;
}

#leftColumn ul .buttonNav .active {
  background-image: rgba(255,255,255,0.25);
}

#leftColumn .btn:hover {
  background: rgba(255,255,255,0.1) !important;
  color: white !important;
  border: 0;
}

#nav {
  height: 10% !important;
  padding-left: 5%;
  -moz-box-shadow: 1px 2px 10px rgba(0,0,0,.5);
  -webkit-box-shadow: 1px 2px 10px rgba(0,0,0,.5);
  box-shadow: 1px 2px 10px rgba(0,0,0,.5);
}

#content {
  height: 90%;
  background-color: #f0f0f0;
  -moz-box-shadow: 1px 2px 10px rgba(0,0,0,.5);
  -webkit-box-shadow: 1px 2px 10px rgba(0,0,0,.5);
  box-shadow: 1px 2px 10px rgba(0,0,0,.5);
}

#leftColumn a > svg, .navbar-nav svg {
  margin-right: 20px;
  padding: 0;
  padding-bottom: 3px;
}

#nav > h1 {
  font-size: 20px;
  margin-bottom: 0;
}

#content .row {
  width: 100%;
  margin: 0;
  height: 50%;
}

#content {
  vertical-align: middle;
}

.content-container {
  width: 90% !important;
  padding-left: 10%;
}

.content-container > .content-title {
  height: auto;
  border-radius: 8px;
  color: white;
  background: rgb(255,194,0);
  background: linear-gradient(90deg, rgba(255,194,0,1) 30%, rgba(242,116,9,1) 70%);
  width: 100%;
  margin-top: 20px;
  padding: 10px;
  margin-bottom: 20px;
}

.content-container > .btn, #selectProjectInput {
  margin-top: 20px;
  text-align: center;
}

.content-title > h1 {
  font-size: 25px;
}

.rightColumn {
  padding: 0 !important;
  display: block !important;
  overflow: auto !important;
}

.content-title > h2 {
  font-size: 18px;
}

#content {
  display: block !important;
  overflow: scroll !important;
}

.LoadingSpinner {
  position: relative;
  display: flex;
  justify-content: center;
  height: 100vh;
  width: 100vw;
  background-color: white;
  bottom: 0;
  left: 0;
  right: 0;
}

.LoadingSpinner > svg {
  position: absolute;
  top: 40%;
}

#selectProjectsCol {
  height: 40%;
}

#graphs > select {
  margin-bottom: 20px;
}

#graphs .graph {
  margin-bottom: 40px;
}

.custom-switch {
  height: initial !important;
}

#graphs {
  justify-content: center;
  font-size: 20px;
}

#boxes {
  height: 80% !important;
}

#boxes > .col {
  height: auto !important;
  width: 30% !important;
  overflow: scroll !important;
}

#boxes > .col ul {
  padding: 0;
  list-style-type: none;
}

#boxes > .col h2, #boxes > .col h3, #boxes > .col p {
  font-size: 2vh;
}

#boxes > .col > ul > li {
  align-items: center;
  border: solid 2px #d0d0d0;
  border-radius: .2em;
  padding: .5em .3em .5em .5em;
  margin-top: 1em;
}

.error > .row {
  height: 100vh;
  justify-content: center;
  align-items: center;
  text-align: center;
  display: block;
}

.error > .row > .col {
    height: auto;
}

